--- a/DemoRazorPageApp/DemoRazorPageApp.csproj
+++ b/DemoRazorPageApp/DemoRazorPageApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -16,10 +16,6 @@
     <ProjectReference Include="..\DemoRazorPageApp.Models\DemoRazorPageApp.Models.csproj" />
     <ProjectReference Include="..\DemoRazorPageApp.Repos\DemoRazorPageApp.Repos.csproj" />
     <ProjectReference Include="..\DemoRazorPageApp.Services\DemoRazorPageApp.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Config\" />
   </ItemGroup>
 
 </Project>
