--- a/DemoRazorPageApp.Tests/DemoRazorPageApp.Tests.csproj
+++ b/DemoRazorPageApp.Tests/DemoRazorPageApp.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="BusinessLogicMocs\**" />
+    <EmbeddedResource Remove="BusinessLogicMocs\**" />
+    <None Remove="BusinessLogicMocs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
@@ -17,10 +23,6 @@
   <ItemGroup>
     <ProjectReference Include="..\DemoRazorPageApp.Interfaces\DemoRazorPageApp.Interfaces.csproj" />
     <ProjectReference Include="..\DemoRazorPageApp.Services\DemoRazorPageApp.Services.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="BusinessLogicMocs\" />
   </ItemGroup>
 
 </Project>
