Made changes to handle null exceptions and corrected scripts on page load and registering table row click event.

--- a/DemoRazorPageApp/appsettings.Development.json
+++ b/DemoRazorPageApp/appsettings.Development.json
@@ -8,5 +8,6 @@
     }
   },
 
-  "VehicleDataFilePath": "./wwwroot/data/vehicles.json"
+  "VehicleDataFilePath": "./wwwroot/data/vehicles.json",
+  "VehicleDataFileBackupPath": "./wwwroot/data/backup/vehicles.json"
 }
