--- a/DemoRazorPageApp/DemoRazorPageApp.csproj
+++ b/DemoRazorPageApp/DemoRazorPageApp.csproj
@@ -18,4 +18,11 @@
     <ProjectReference Include="..\DemoRazorPageApp.Services\DemoRazorPageApp.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="wwwroot\data\vehicles.json">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
